# testsolocoder

./: .gitignore  README.md
23279/: index.html  package-lock.json  package.json
32039/: README.md  eval_report_round_1.md  pyproject.toml
32039/track/: main.py
32039/track/commands/: cli.py
32039/track/models/: transaction.py
32039/track/storage/: database.py
32039/track/utils/: chart.py  exporter.py  formatting.py
32039/track_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
32040/: eval_report_round_1.md  index.html
32041/: .gitignore  .original_req.txt  README.md  audio.py  bullets.py  config.py  enemies.py  index.html  main.py  package-lock.json  package.json  player.py  powerups.py  ui.py
32044/: .env.example  README.md  finance_api_eval_32044.md  go.mod  go.sum  main.go
32046/: pyproject.toml
32046/kanban_cli/: cli.py  core.py  display.py  models.py  storage.py
32046/kanban_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
32048/: .env.example  Dockerfile  docker-compose.yml  go.mod  go.sum  main.go
32051/: pyproject.toml  requirements.txt  test_app.py  test_export.csv
32051/flashcards/: __init__.py  cli.py  models.py  session.py  sm2.py  stats.py  storage.py
32051/flashcards_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
42891/: go.mod  go.sum  main.go
42894/: .env.example  main.py  requirements.txt  rss-aggregator-eval-r2.md
42900/: go.mod  go.sum  main.go
42901/: family_accounting.db  main.py
42902/: README.md
43043/: README.md  pyproject.toml
43043/src/fit_tracker/: cli.py  database.py  exercises.py  export.py  plans.py  statistics.py  training.py
43043/src/fit_tracker.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
43044/: index.html  package-lock.json  package.json
43050/: .gitignore  .original_req.txt  README.md
(+3879 files in other folders)
